# rugby-vision

./: .abacus.donotdelete  .gitignore  AGENT_LIST.md  AGENT_STARTING_PROMPTS.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CONTRIBUTING.md  DETECTION_TRACKING_OVERVIEW.md  FORWARD_PASS_PHYSICS_MODEL.md  LICENSE  MEGA_PROMPT_FOR_AGENTS.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PLAN_RUGBY_VISION.md  README.md  RUGBY_VISION_REQUIREMENTS.md  SPATIAL_MODEL_AND_COORDINATES.md  VIDEO_INGEST_DESIGN.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  video_ingest.py  video_sync.py
backend/tests/: __init__.py  test_video_ingest.py  test_video_sync.py
config/: README.md  camera_calibration_example.json
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json
frontend/src/: App.css  App.tsx
infra/ci/: README.md
infra/deploy/: README.md
ml/: calibration.py  decision_engine.py  detection_tracking_api.py  detector.py  field_coords.py  mock_data_generator.py  spatial_model.py  tracker.py  triangulation.py
ml/tests/: __init__.py  test_calibration.py  test_decision_engine.py  test_detector.py  test_field_coords.py  test_spatial_model.py  test_tracker.py  test_triangulation.py
ml/tests/fixtures/: __init__.py  trajectories.py
